--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ body {
   <title>PS50YT</title>
 </head>
   <body>
+    <img src="logo.png" width="200" height="90">
+        <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a>
+          <a href="Feedback.html">Feedback</a>
+    <hr>
     <h1>Welcome to PS50YT's web</h1>
+    <img src="channel4_profile (1).jpg" width="500" height="500">
   </body>
 </html>
