--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <style>
+<style>
 body {
   background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fmodrinth.com%2Fshaders&psig=AOvVaw2CE4B_uatipenrb6jQHFEG&ust=1722528477429000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLj25uLU0YcDFQAAAAAdAAAAABAE');
    background-repeat: no-repeat;
@@ -17,14 +17,14 @@ body {
         
 }
 </style>
-  <title>PS50YT</title>
+<title>PS50YT</title>
 </head>
   <body>
-    <img src="logo.png" width="200" height="90">
-        <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a>
+    <img src="logo.png" width="260" height="90">
+        <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a><br>
           <a href="Feedback.html">Feedback</a>
-    <hr>
-    <h1>Welcome to PS50YT's web</h1>
-    <img src="channel4_profile (1).jpg" width="500" height="500">
+    <hr><br>
+    <h1 style="font-family:verdana">Welcome to PS50YT's web</h1>
+    <img src="channels4_profile (1).jpg" width="500" height="500">
   </body>
 </html>
