--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ body {
 </style>
 <title>PS50YT</title>
 </head>
-  <body>
+  <body><center>
     <img src="logo.png" width="260" height="90">
-        <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a><br>
+        <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a>
           <a href="Feedback.html">Feedback</a>
-    <hr><br>
+    <hr>
     <h1 style="font-family:verdana">Welcome to PS50YT's web</h1>
     <img src="channels4_profile (1).jpg" width="500" height="500">
-  </body>
+  </body></center>
 </html>
