--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@ body {
   background-attachment: fixed;  
   background-size: cover;
    h1 {
-            color: white;
             font-family:verdana;
         }
         p {
-            color: white;
             font-size: 18px;
         
 }
@@ -20,7 +18,7 @@ body {
 <title>PS50YT</title>
 </head>
   <body><center>
-    <img src="logo.png" width="260" height="90">
+    <img src="logo.png" width="260" height="90"><br>
         <a href="https://ps50yt.github.io/playgamebox/">PlayGameBox</a>
           <a href="Feedback.html">Feedback</a>
     <hr>
